--- a/_posts/2022-08-02-ZFS.md
+++ b/_posts/2022-08-02-ZFS.md
@@ -7,4 +7,4 @@ thumbnail: /assets/z3697_load_hardware.jpg
 categories: news
 use_math: false
 ---
-Jack attended the Z Fundamental Science Workshop in Albuquerque NM, presenting results from our successful first shot on Z for the MARZ collaboration. The ZFSW brings together researchers from around the world to discuss the latest results and ideas for new research on Z, the most pulsed-power pulsed-power machine in the world.You can find out more about MARZ on  [our Research page](/research/MARZ)
+Jack attended the Z Fundamental Science Workshop in Albuquerque NM, presenting results from our successful first shot on Z for the MARZ collaboration. The ZFSW brings together researchers from around the world to discuss the latest results and ideas for new research on Z, the most powerful pulsed-power machine in the world. You can find out more about MARZ on  [our Research page](/research/MARZ).
