Fix APS post image

--- a/_posts/2022-10-24-APS2022.md
+++ b/_posts/2022-10-24-APS2022.md
@@ -3,7 +3,7 @@ layout: post
 title:  "APS Division of Plasma Physics (DPP) 2022"
 date:   2022-10-24 11:00:00 -0500
 author: Thomas Varnish
-thumbnail: /assets/20221024_APS2022/APS2022_Group.jpg
+thumbnail: /assets/20221024_APS2022/APS2022_Group.JPG
 categories: news
 use_math: false
 ---
