now with more Simran

--- a/_posts/2023-10-30-APS-DPP.md
+++ b/_posts/2023-10-30-APS-DPP.md
@@ -16,6 +16,11 @@ Our group had a great week presenting our work and learning from others at the a
 %}	
 
 {% include image_with_caption.html 
+    src="/assets/2023_APS_DPP/2023_APS_DPP6.jpeg"
+    caption="Simran Chowdhry presents her poster, Simulations of the Radiative Collapse of Plasmoids in Extreme Astrophysical Environments"
+%}
+
+{% include image_with_caption.html 
     src="/assets/2023_APS_DPP/2023_APS_DPP4.jpeg"
     caption="Lansing Horan IV engages with his audience at his poster, Synthetic optical diagnostics for MAgnetic Reconnection on Z (MARZ) experiments"
 %}	
